5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1582_1333.log
== SUBMITION (2019-03-12 21:48:37) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- EXECUTION TIME:
0.170336
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:49:19) 
-- CODE:
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.203949
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    print(30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:50:06) 
-- CODE:
print(30 – (3 ** 2) + (8 // 3) ** 2 * 10)
-- EXECUTION TIME:
0.142249
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    print(30 \u2013 (3 ** 2) + (8 // 3) ** 2 * 10)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:51:01) 
-- CODE:
print(30 – (3 ** 2) + 8 // (3 ** 2) * 10)
-- EXECUTION TIME:
0.182181
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    print(30 \u2013 (3 ** 2) + 8 // (3 ** 2) * 10)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:51:18) 
-- CODE:
print(30 – (3 ** 2) + (8 // (3 ** 2)) * 10)
-- EXECUTION TIME:
0.197499
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    print(30 \u2013 (3 ** 2) + (8 // (3 ** 2)) * 10)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:51:19) 
-- CODE:
print(30 – (3 ** 2) + (8 // (3 ** 2)) * 10)
-- EXECUTION TIME:
0.161998
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    print(30 \u2013 (3 ** 2) + (8 // (3 ** 2)) * 10)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:51:20) 
-- CODE:
print(30 – (3 ** 2) + (8 // (3 ** 2)) * 10)
-- EXECUTION TIME:
0.150493
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    print(30 \u2013 (3 ** 2) + (8 // (3 ** 2)) * 10)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:51:20) 
-- CODE:
print(30 – (3 ** 2) + (8 // (3 ** 2)) * 10)
-- EXECUTION TIME:
0.109778
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    print(30 \u2013 (3 ** 2) + (8 // (3 ** 2)) * 10)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:51:20) 
-- CODE:
print(30 – (3 ** 2) + (8 // (3 ** 2)) * 10)
-- EXECUTION TIME:
0.186205
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    print(30 \u2013 (3 ** 2) + (8 // (3 ** 2)) * 10)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:51:20) 
-- CODE:
print(30 – (3 ** 2) + (8 // (3 ** 2)) * 10)
-- EXECUTION TIME:
0.123275
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    print(30 \u2013 (3 ** 2) + (8 // (3 ** 2)) * 10)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:51:21) 
-- CODE:
print(30 – (3 ** 2) + (8 // (3 ** 2)) * 10)
-- EXECUTION TIME:
0.196601
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    print(30 \u2013 (3 ** 2) + (8 // (3 ** 2)) * 10)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:51:21) 
-- CODE:
print(30 – (3 ** 2) + (8 // (3 ** 2)) * 10)
-- EXECUTION TIME:
0.118965
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    print(30 \u2013 (3 ** 2) + (8 // (3 ** 2)) * 10)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:51:21) 
-- CODE:
print(30 – (3 ** 2) + (8 // (3 ** 2)) * 10)
-- EXECUTION TIME:
0.119449
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    print(30 \u2013 (3 ** 2) + (8 // (3 ** 2)) * 10)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:53:49) 
-- CODE:
print(30 – (3 ** 2) + (8 // (3 ** 2) * 10))
-- EXECUTION TIME:
0.187918
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    print(30 \u2013 (3 ** 2) + (8 // (3 ** 2) * 10))
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:54:13) 
-- CODE:
print(30 – (3 ** 2) + 8 // ((3 ** 2) * 10))
-- EXECUTION TIME:
0.185061
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    print(30 \u2013 (3 ** 2) + 8 // ((3 ** 2) * 10))
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:55:41) 
-- CODE:
print(30 – (3 ** 2) + (8 // (3 ** 2)) * 10))
-- EXECUTION TIME:
0.149741
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    print(30 \u2013 (3 ** 2) + (8 // (3 ** 2)) * 10))
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:55:55) 
-- CODE:
print(30 – (3 ** 2) + ((8 // (3 ** 2)) * 10))
-- EXECUTION TIME:
0.161877
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    print(30 \u2013 (3 ** 2) + ((8 // (3 ** 2)) * 10))
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:56:03) 
-- CODE:
print(30 – (3 ** 2) + (8 // (3 ** 2)) * 10)
-- EXECUTION TIME:
0.203095
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    print(30 \u2013 (3 ** 2) + (8 // (3 ** 2)) * 10)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:56:04) 
-- CODE:
print(30 – (3 ** 2) + (8 // (3 ** 2)) * 10)
-- EXECUTION TIME:
0.149975
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    print(30 \u2013 (3 ** 2) + (8 // (3 ** 2)) * 10)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:56:04) 
-- CODE:
print(30 – (3 ** 2) + (8 // (3 ** 2)) * 10)
-- EXECUTION TIME:
0.139198
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    print(30 \u2013 (3 ** 2) + (8 // (3 ** 2)) * 10)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:56:05) 
-- CODE:
print(30 – (3 ** 2) + (8 // (3 ** 2)) * 10)
-- EXECUTION TIME:
0.174807
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    print(30 \u2013 (3 ** 2) + (8 // (3 ** 2)) * 10)
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:56:24) 
-- CODE:
print((30 – (3 ** 2)) + (8 // (3 ** 2)) * 10)
-- EXECUTION TIME:
0.147678
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    print((30 \u2013 (3 ** 2)) + (8 // (3 ** 2)) * 10)
              ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:56:26) 
-- CODE:
print((30 – (3 ** 2)) + (8 // (3 ** 2)) * 10)
-- EXECUTION TIME:
0.19965
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    print((30 \u2013 (3 ** 2)) + (8 // (3 ** 2)) * 10)
              ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:57:22) 
-- CODE:
print((30 – (3 ** 2)) + ((8 // (3 ** 2)) * 10))
-- EXECUTION TIME:
0.225466
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    print((30 \u2013 (3 ** 2)) + ((8 // (3 ** 2)) * 10))
              ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:57:56) 
-- CODE:
print(21)
-- EXECUTION TIME:
0.181564
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:00:03) 
-- CODE:
print(20)
-- EXECUTION TIME:
0.142304
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
20
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:00:09) 
-- CODE:
print(21)
-- EXECUTION TIME:
0.120156
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:00:27) 
-- CODE:
print(3*7)
-- EXECUTION TIME:
0.175276
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:07:39) 
-- CODE:
print(30-(3**2)+(8//(3**2))*10)
-- EXECUTION TIME:
0.195311
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:08:25) 
-- CODE:
print(30-(3**2)+(8//(3**2))*10)
-- EXECUTION TIME:
0.121266
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
